--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,4 @@
 name=My Web Project
 version=0.1.0-SNAPSHOT
-unfiltered_version=0.5.3
+unfiltered_version=ls(unfiltered-netty,unfiltered)
 description=This template generates an Unfiltered project using Netty as the underlying server.
