--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,3 +3,5 @@ version=0.1.0-SNAPSHOT
 unfiltered_version=ls(unfiltered-netty,unfiltered)
 description=This template generates an Unfiltered project using Netty as the underlying server.
 scala_version=2.11.2
+sbt_version=0.13.5
+dispatch_version=0.11.2
