update some settings
- use latest scala versions
- use latest g8 plugin
- use latest sbt
- update g8 url
- use maven() instead of ls()
- remove unused resolver

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,7 +1,7 @@
 name=My Web Project
 version=0.1.0-SNAPSHOT
-unfiltered_version=ls(unfiltered-netty,unfiltered)
+unfiltered_version=maven(net.databinder, unfiltered-netty_2.11)
 description=This template generates an Unfiltered project using Netty as the underlying server.
-scala_version=2.11.2
-sbt_version=0.13.5
-dispatch_version=0.11.2
+scala_version=2.11.8
+sbt_version=0.13.13
+dispatch_version=maven(net.databinder.dispatch, dispatch-core_2.11)
