--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: scala
-
+sudo: false
 scala:
-  - 2.10.4
-  - 2.11.2
-
+  - 2.10.6
+  - 2.11.8
+jdk: oraclejdk7
 script:
-  - sbt ";set G8Keys.properties in G8Keys.g8 in Test ~= { _ + (\"scala_version\" -> \"$TRAVIS_SCALA_VERSION\")}; g8Test"
+  - sbt ";set g8Properties in g8 in Test ~= { _ + (\"scala_version\" -> \"$TRAVIS_SCALA_VERSION\")}; g8Test"
