--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: scala
 sudo: false
 scala:
   - 2.11.8
-jdk: oraclejdk7
+  - 2.12.1
+jdk: oraclejdk8
 script:
   - sbt ";set g8Properties in g8 in Test ~= { _ + (\"scala_version\" -> \"$TRAVIS_SCALA_VERSION\")}; g8Test"
+addons:
+  apt:
+    packages:
+    - oracle-java8-installer
