use openjdk7 instead of oraclejdk7
travis-ci no longer support oraclejdk7

- https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
- http://www.webupd8.org/2017/06/why-oracle-java-7-and-6-installers-no.html

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ script:
   - sbt ";set g8Properties in g8 in Test ~= { _ ++ Map((\"scala_version\" -> \"$TRAVIS_SCALA_VERSION\"), (\"sbt_version\" -> \"$SBT_VERSION\")) }; g8Test"
 matrix:
   include:
-  - jdk: oraclejdk7
+  - jdk: openjdk7
     scala: 2.11.11
     env: SBT_VERSION="0.13.16"
   - jdk: oraclejdk8
