--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,17 @@
 language: scala
 sudo: false
+jdk: oraclejdk8
 script:
   - sbt ";set g8Properties in g8 in Test ~= { _ ++ Map((\"scala_version\" -> \"$TRAVIS_SCALA_VERSION\"), (\"sbt_version\" -> \"$SBT_VERSION\")) }; g8Test"
 matrix:
   include:
-  - jdk: openjdk7
-    scala: 2.11.12
+  - scala: 2.11.12
     env: SBT_VERSION="0.13.17"
-  - jdk: oraclejdk8
-    scala: 2.11.12
+  - scala: 2.11.12
     env: SBT_VERSION="1.1.6"
-  - jdk: oraclejdk8
-    scala: 2.12.6
+  - scala: 2.12.6
     env: SBT_VERSION="0.13.17"
-  - jdk: oraclejdk8
-    scala: 2.12.6
+  - scala: 2.12.6
     env: SBT_VERSION="1.1.6"
 addons:
   apt:
