--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -2,6 +2,6 @@ name=My Web Project
 version=0.1.0-SNAPSHOT
 unfiltered_version=maven(ws.unfiltered, unfiltered-netty_2.12)
 description=This template generates an Unfiltered project using Netty as the underlying server.
-scala_version=2.12.6
-sbt_version=0.13.17
+scala_version=2.12.7
+sbt_version=maven(org.scala-sbt, sbt)
 dispatch_version=maven(net.databinder.dispatch, dispatch-core_2.12)
