--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,5 @@ matrix:
     env: SBT_VERSION="0.13.18"
   - scala: 2.12.8
     env: SBT_VERSION="1.2.8"
+  - scala: 2.13.0
+    env: SBT_VERSION="1.2.8"
