--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,11 @@ matrix:
     env: SBT_VERSION="1.3.10"
   - scala: 2.13.1
     env: SBT_VERSION="1.3.10"
+cache:
+  directories:
+    - "$HOME/.ivy2/cache"
+    - "$HOME/.sbt/launchers"
+    - "$HOME/.cache/coursier/v1"
+before_cache:
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" | xargs rm
+  - find $HOME/.ivy2/cache -name "*SNAPSHOT*" | xargs rm -rf
