--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,6 +1,6 @@
 name=My Web Project
 version=0.1.0-SNAPSHOT
-unfiltered_version=maven(ws.unfiltered, unfiltered-netty_2.13)
+unfiltered_version=maven(ws.unfiltered, unfiltered-netty_2.13, stable)
 description=This template generates an Unfiltered project using Netty as the underlying server.
 scala_version=2.13.3
 sbt_version=maven(org.scala-sbt, sbt)
