--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,4 +3,4 @@ version=0.1.0-SNAPSHOT
 unfiltered_version=maven(ws.unfiltered, unfiltered-netty_2.13, stable)
 description=This template generates an Unfiltered project using Netty as the underlying server.
 scala_version=maven(org.scala-lang, scala-library, stable)
-sbt_version=maven(org.scala-sbt, sbt)
+sbt_version=maven(org.scala-sbt, sbt, stable)
